--- a/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiScanner.apk/res/values-ro/strings.xml
@@ -186,19 +186,19 @@
     <string name="camera_error_title">Eroare de cameră</string>
     <string name="cancel">Renunțați</string>
     <string name="choose_picture">Selectați codul QR</string>
-  <string name="com_taobao_tae_sdk_alert_message">您离开太久了，请重新操作</string>
-  <string name="com_taobao_tae_sdk_authorize_title">登录授权</string>
-  <string name="com_taobao_tae_sdk_back_message">返回</string>
-  <string name="com_taobao_tae_sdk_cart_title">购物车</string>
-  <string name="com_taobao_tae_sdk_close_message">返回</string>
-  <string name="com_taobao_tae_sdk_loading_progress_message">加载中</string>
-  <string name="com_taobao_tae_sdk_login_progress_message">登录中</string>
-  <string name="com_taobao_tae_sdk_logout_fail_message">登出失败</string>
-  <string name="com_taobao_tae_sdk_network_not_available_message">网络无法连接</string>
-  <string name="com_taobao_tae_sdk_qr_login_title_bar_text">淘宝账号登录</string>
-  <string name="com_taobao_tae_sdk_system_exception">系统异常</string>
-  <string name="com_taobao_tae_sdk_trade_confirm_progress_message">交易确认中</string>
-  <string name="com_taobao_tae_sdk_trade_title">确认下单</string>
+    <string name="com_taobao_tae_sdk_alert_message">Ați lipsit mult timp. Vă rugăm reîncercați.</string>
+    <string name="com_taobao_tae_sdk_authorize_title">Autorizare conectare</string>
+    <string name="com_taobao_tae_sdk_back_message">Înapoi</string>
+    <string name="com_taobao_tae_sdk_cart_title">Coș de cumpărături</string>
+    <string name="com_taobao_tae_sdk_close_message">Înapoi</string>
+    <string name="com_taobao_tae_sdk_loading_progress_message">Încărcare</string>
+    <string name="com_taobao_tae_sdk_login_progress_message">Aterizare</string>
+    <string name="com_taobao_tae_sdk_logout_fail_message">Deconectarea a eșuat</string>
+    <string name="com_taobao_tae_sdk_network_not_available_message">Nu se poate conecta la rețea</string>
+    <string name="com_taobao_tae_sdk_qr_login_title_bar_text">Conectare la contul Taobao</string>
+    <string name="com_taobao_tae_sdk_system_exception">Excepție de sistem</string>
+    <string name="com_taobao_tae_sdk_trade_confirm_progress_message">Confirmare cumpărare</string>
+    <string name="com_taobao_tae_sdk_trade_title">Confirmare comandă</string>
     <string name="common_retake_picture">Reluați</string>
     <string name="common_retry">Încercați din nou</string>
     <string name="common_save">Salvați</string>
