--- a/Romanian/main/XiaomiSimActivateService.apk/res/values-ro/strings.xml
+++ b/Romanian/main/XiaomiSimActivateService.apk/res/values-ro/strings.xml
@@ -27,14 +27,14 @@
     <string name="activate_phone_failed_notif_title_msim">"Imposibil de activat cartela SIM %s"</string>
     <string name="activate_phone_success_notif_title">Cartelă SIM activată</string>
     <string name="activate_phone_success_notif_title_msim">Cartela SIM %s a fost activată</string>
-    <string name="activate_popup_confirm_all_gateway_failed_query_info">Reîncercaţi</string>
-    <string name="activate_popup_confirm_all_gateway_failed_send_sms">Reîncercaţi</string>
-    <string name="activate_popup_confirm_error_device_id">Reîncercaţi</string>
+    <string name="activate_popup_confirm_all_gateway_failed_query_info">Încercați din nou</string>
+    <string name="activate_popup_confirm_all_gateway_failed_send_sms">Încercați din nou</string>
+    <string name="activate_popup_confirm_error_device_id">Încercați din nou</string>
     <string name="activate_popup_confirm_failed_phone_error">Reîncercaţi</string>
     <string name="activate_popup_confirm_failed_query_info">Retrimiteți</string>
-    <string name="activate_popup_confirm_failed_receive_sms">Reîncercaţi</string>
+    <string name="activate_popup_confirm_failed_receive_sms">Încercați din nou</string>
     <string name="activate_popup_confirm_failed_send_sms">Retrimiteți</string>
-    <string name="activate_popup_confirm_failed_server">Reîncercaţi</string>
+    <string name="activate_popup_confirm_failed_server">Încercați din nou</string>
     <string name="activate_popup_desc_2_intl_sim_cards">2 mesaje text internaţionale vor fi trimise pentru activarea %s (TARIFARE DE LA OPERATOR!). </string>
     <string name="activate_popup_desc_2_sim_cards">2 mesaje text vor fi trimise pentru activarea %s (TARIFARE DE LA OPERATOR!). </string>
     <string name="activate_popup_desc_all_gateway_failed_query_info">"Nu se poate găsi numărul de telefon. Asigurați-vă că a fost activată cartela SIM.
