--- a/Romanian/main/MiuiHome.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiHome.apk/res/values-ro/strings.xml
@@ -77,6 +77,7 @@
     <string name="editing_mode_enter_tip_text">Ciupiți pentru a edita ecranul de pornire</string>
     <string name="editing_mode_title">%1$d selectate</string>
     <string name="editing_mode_title_empty">0 selectate</string>
+    <string name="editing_set_screen_layout_cells">Selectați efectele de dispunere a ecranului</string>
     <string name="editing_set_transition_effect_tips">Selectaţi efectul de tranziţie</string>
     <string name="editing_set_wallpaper_tips">Selectaţi imaginea de fundal</string>
     <string name="editing_tips">Editaţi ecranul de pornire</string>
@@ -173,7 +174,7 @@
     <string name="menu_workspace_preview">Previzualizare</string>
     <string name="mi_wallpaper">Magazin Teme MIUI</string>
     <string name="mtzgadget_missing_text">"Obiectul widget nu este disponibil"</string>
-    <string name="multi_selecting_tips">Pentru a selecta o aplicaţie, atingeţi pictograma corespunzătoare</string>
+    <string name="multi_selecting_tips">Pentru a selecta o aplicaţie, atingeţi pictograma corespunzătoare și mutați-o aici</string>
     <string name="no_detail_page">Nicio pagină cu detalii</string>
     <string name="normal_wallpaper">Imagine de fundal</string>
     <string name="notification_installed">Instalat cu succes</string>
@@ -238,6 +239,7 @@
     <string name="status_pending">în aşteptare</string>
     <string name="title_select_live_folder">Selectaţi dosarul</string>
     <string name="title_select_shortcut">Selectaţi comanda rapidă</string>
+    <string name="toast_screen_icons_misplaced">Restaurate dintr-o altă bază de date; unele pictograme pot fi dispuse necorespunzător</string>
     <string name="toggle_select_title">Selectaţi un comutator</string>
     <string name="toggle_title">Comutatoare</string>
     <string name="transformation_type_classic">Glisare cu salt</string>
