--- a/Romanian/main/MiuiVideo.apk/res/values-ro/strings.xml
+++ b/Romanian/main/MiuiVideo.apk/res/values-ro/strings.xml
@@ -29,6 +29,7 @@
     <string name="alert_dialog_download_btn_hide">Ascundeţi</string>
     <string name="alert_dialog_download_dup_task">Descărcare în curs, așteptați…</string>
     <string name="alert_dialog_download_error">Eroare de descărcare</string>
+    <string name="alert_dialog_download_install_task">Se așteaptă finalizarea instalării extensiei…</string>
     <string name="alertdialog_downapp_btn_back">Înapoi</string>
     <string name="all">toate</string>
     <string name="all_ep">Toate ep.</string>
@@ -90,6 +91,7 @@
     <string name="count_ji_quan">Ep. %d</string>
     <string name="count_qi">Ep. %s</string>
     <string name="create_tencent_shortcut_message">S-a creat pe ecranul principal o scurtătură pentru Videoclipuri Tencent</string>
+    <string name="current_price">Cotația actuală</string>
     <string name="data_buffering">Încărcare memorie tampon</string>
     <string name="datastream_alert_download">Utilizarea conexiunii de date mobile pentru a descărca videoclipuri va creşte utilizarea datelor. Dacă depăşiţi limita planului dvs., operatorul ar putea percepe taxe suplimentare.</string>
     <string name="datastream_alert_hint">Puteți dezactiva notificările de utilizare a datelor în orice moment în Setări.</string>
@@ -279,6 +281,160 @@
     <string name="original_price">preț original</string>
     <string name="other_info">Altele</string>
     <string name="other_setting">Altele</string>
+    <string name="passport_access_denied">Acces nepermis</string>
+    <string name="passport_account_hint_text">Adresa de e-mail sau ID-ul contului Mi</string>
+    <string name="passport_account_identity_title">Verificați-vă identitatea</string>
+    <string name="passport_account_label">Contul Mi</string>
+    <string name="passport_account_name">Cont: %1$s</string>
+    <string name="passport_account_not_activated">"Contul nu a fost activat"</string>
+    <string name="passport_account_not_actived">"Contul dumneavoastră nu a fost activat"</string>
+    <string name="passport_active_email_visit">Verificați căsuța de e-mail de la %s</string>
+    <string name="passport_activing_account">Activare…</string>
+    <string name="passport_area_code_hot">UTILIZATE FRECVENT</string>
+    <string name="passport_area_code_title">Codul țării</string>
+    <string name="passport_auto_generate_pwd">Generați o parolă sigură</string>
+    <string name="passport_back">Înapoi</string>
+    <string name="passport_bad_authentication">Nume utilizator sau parolă incorecte</string>
+    <string name="passport_barcode_add_account_prompt">Pentru a conecta un cont, scanați codul QR din nou după ce vă conectați.</string>
+    <string name="passport_change_account"><u>Schimbare cont</u></string>
+    <string name="passport_change_phone_number">Schimbare număr de telefon</string>
+    <string name="passport_checking_account">Verificare parolă…</string>
+    <string name="passport_checking_input">Verificare input…</string>
+    <string name="passport_click_email_to_valid">"
+
+Pentru a vă activa contul, accesați 
+ link-ul din e-mail."</string>
+    <string name="passport_completed">Finalizat</string>
+    <string name="passport_confirm_recycle_account">Da</string>
+    <string name="passport_copy_message_text_success">Copiat cu succes</string>
+    <string name="passport_copy_message_vcode">Copiați codul</string>
+    <string name="passport_delete_account">Deconectare</string>
+    <string name="passport_downlink_reg">Creați un cont utilizând numărul de telefon</string>
+    <string name="passport_email">Adresă de e-mail</string>
+    <string name="passport_email_or_id_hint_text">Adresă de e-mail sau ID cont Mi</string>
+    <string name="passport_email_reg_success_summary">%1$s a fost asociat contului dumneavoastră. Îl puteți utiliza pentru a vă conecta sau pentru a vă reseta parola.</string>
+    <string name="passport_error_device_id">"Nu s-a putut obține ID-ul telefonului"</string>
+    <string name="passport_error_dup_email">Adresa de e-mail introdusă este asociată deja cu un alt cont.</string>
+    <string name="passport_error_email">Adresa de e-mail introdusă este incorectă</string>
+    <string name="passport_error_empty_captcha_code">Introduceți codul passport_captcha</string>
+    <string name="passport_error_empty_email">Introduceți adresa dvs. de e-mail</string>
+    <string name="passport_error_empty_phone_num">Introduceți numărul dvs. de telefon</string>
+    <string name="passport_error_empty_pwd">Introduceți parola dvs.</string>
+    <string name="passport_error_empty_username">Introduceți ID-ul contului dvs.</string>
+    <string name="passport_error_empty_vcode">Introduceți codul de verificare</string>
+    <string name="passport_error_illegal_pwd">Parolă incorectă</string>
+    <string name="passport_error_invalid_dev_id">"ID-ul telefonului dvs. nu este valid."</string>
+    <string name="passport_error_invalid_phone_num">Număr de telefon nevalid</string>
+    <string name="passport_error_login">"Nu s-a putut conecta"</string>
+    <string name="passport_error_network">"Nu s-a putut conecta la rețea"</string>
+    <string name="passport_error_phone_error">Număr de telefon nevalid</string>
+    <string name="passport_error_server">Eroare de server</string>
+    <string name="passport_error_sim_not_ready">"Nu s-a putut găsi cartela SIM"</string>
+    <string name="passport_error_ssl_hand_shake">"Nu s-a putut conecta la server"</string>
+    <string name="passport_error_unknown">"Nu s-a putut conecta"</string>
+    <string name="passport_error_user_name">Numele de utilizator introdus este nevalid.</string>
+    <string name="passport_failed_to_send_activate_email">"Nu s-a putut trimite e-mailul de activare"</string>
+    <string name="passport_find_password_on_web_msg">Vizitați account.mi.com pentru a vă reseta parola.</string>
+    <string name="passport_forget_password"><u>Am uitat parola</u></string>
+    <string name="passport_forget_password_no_underline">Am uitat parola</string>
+    <string name="passport_get_back_pwd">Recuperați parola contului</string>
+    <string name="passport_get_verify_code">Obțineți codul</string>
+    <string name="passport_getting_verify_code">Obținere</string>
+    <string name="passport_i_know">Am înțeles</string>
+    <string name="passport_identitfication_expired">Codul de verificare a expirat; reluați</string>
+    <string name="passport_imei_permission_denied_message">"Vă solicităm permisiunea de a obține IMEI-ul telefonului dumneavoastră. Contul Mi utilizează codul IMEI pentru a identifica telefonul de pe care vă conectați sau deconectați, pentru a vă menține contul în siguranță."</string>
+    <string name="passport_imei_permission_denied_title">Solicitare permisiune IMEI</string>
+    <string name="passport_input_captcha_hint">Introduceți codul</string>
+    <string name="passport_input_password_for_login">Acest număr de telefon este asociat unui cont existent; introduceți parola</string>
+    <string name="passport_input_password_hint">Introduceți parola</string>
+    <string name="passport_input_phone_hint">Introduceți numărul de telefon</string>
+    <string name="passport_input_vcode_hint">Introduceți codul de verificare</string>
+    <string name="passport_license_host_unreachable">"Nu s-a putut conecta la rețea. Puteți vedea această pagină la %s."</string>
+    <string name="passport_loading">Se încarcă…</string>
+    <string name="passport_login">Conectare</string>
+    <string name="passport_login_failed">"Nu s-a putut conecta"</string>
+    <string name="passport_login_instead_reg">Utilizați acest număr de telefon</string>
+    <string name="passport_login_instead_reg_with_email">Utilizați această adresă de e-mail</string>
+    <string name="passport_login_prompt">Un singur cont Mi. Toate serviciile Mi.</string>
+    <string name="passport_login_title">Conectați-vă la contul dvs. Mi</string>
+    <string name="passport_login_using_other_ways"><u>Alte modalități de conectare</u></string>
+    <string name="passport_message_dialog_title">Coduri de verificare prin SMS</string>
+    <string name="passport_next">Următorul</string>
+    <string name="passport_notification_title">Eroare de conectare la %1$s</string>
+    <string name="passport_password_req_notice">Parola trebuie să conțină 8-16 caractere și să includă cifre și litere(diferențiere litere mici/litere mari).</string>
+    <string name="passport_phone_num_hint_text">Număr de telefon</string>
+    <string name="passport_prev">Înapoi</string>
+    <string name="passport_privacy_policy">Politica de confidențialitate</string>
+    <string name="passport_pwd_generate_failure">"Nu s-a putut genera parola"</string>
+    <string name="passport_pwd_generating">Generare…</string>
+    <string name="passport_quick_login_dialog_step2_title">Verificare în doi pași</string>
+    <string name="passport_quick_login_dialog_title">Verificare parolă</string>
+    <string name="passport_quick_login_step2_title">Verificare în doi pași</string>
+    <string name="passport_quick_login_title">Introduceți parola</string>
+    <string name="passport_re_get_verify_code">Obțineți codul din nou</string>
+    <string name="passport_re_register">Creați un cont din nou</string>
+    <string name="passport_recycle_account_prompt">Este acest cont Mi al dvs.?</string>
+    <string name="passport_reg_btn_using_other_phone">Utilizați numărul de telefon alternativ</string>
+    <string name="passport_reg_failed">"Nu s-a putut crea contul"</string>
+    <string name="passport_reg_prompt">"Nu aveți un cont Mi? Creați unul în mod gratuit."</string>
+    <string name="passport_reg_success">Cont creat</string>
+    <string name="passport_reg_success_summary">%1$s a fost asociat contului dvs. Îl puteți utiliza pentru a vă conecta sau pentru a vă reseta parola.</string>
+    <string name="passport_reg_type_email">Utilizați adresa de e-mail</string>
+    <string name="passport_reg_using_other_phone"><u>Utilizați numărul de telefon alternativ</u></string>
+    <string name="passport_reg_using_other_phone_number_prompt">"Creați un cont nou utilizând "</string>
+    <string name="passport_reg_using_phone_number_prompt">Creați un cont utilizând numărul de telefon</string>
+    <string name="passport_reg_via_sms_alert">Operatorul dvs. vă poate taxa pentru un mesaj SMS utilizat pentru activarea acestui serviciului.</string>
+    <string name="passport_reging">Se crează contul…</string>
+    <string name="passport_register">Creați un cont</string>
+    <string name="passport_register_account_goto_email">Accesați căsuța de e-mail</string>
+    <string name="passport_register_account_verified_confirm">Cont verificat</string>
+    <string name="passport_register_by_email"><u>Creați un cont utilizând adresa de e-mail</u></string>
+    <string name="passport_register_restricted">Au fost asociate prea multe conturi cu acest număr de telefon; încercați cu alt număr</string>
+    <string name="passport_register_restricted_title">"Nu s-a putut utiliza acest număr de telefon"</string>
+    <string name="passport_registered_phone_user_ID">ID utilizator: %s</string>
+    <string name="passport_registered_phone_user_name">Nume utilizator: %s</string>
+    <string name="passport_reject_recycle_account">Nu</string>
+    <string name="passport_relogin">Conectați-vă din nou</string>
+    <string name="passport_relogin_notice">Trebuie să vă conectați din nou</string>
+    <string name="passport_remove_confirm">Deconectați-vă</string>
+    <string name="passport_remove_unactivated_account_notice">"Contul dvs. nu a fost activat."</string>
+    <string name="passport_resend_active_email">Retrimite e-mailul</string>
+    <string name="passport_reset_fail_title">"Nu s-a putut reseta"</string>
+    <string name="passport_reset_password_prompt">Parola este incorectă</string>
+    <string name="passport_reset_password_title">Resetare parolă</string>
+    <string name="passport_restart">Reluați</string>
+    <string name="passport_restart_register_prompt">Vi se poate solicita un alt mesaj de verificare pentru crearea contului.</string>
+    <string name="passport_restart_register_title">Creați un cont Mi</string>
+    <string name="passport_retry">Încercați din nou</string>
+    <string name="passport_select_reg_ways_title">Alte modalități de creare cont</string>
+    <string name="passport_send_too_many_code">S-au trimis prea multe mesaje de verificare pe acest număr de telefon. Așteptați 24 de ore și încercați din nou.</string>
+    <string name="passport_setting">Setare…</string>
+    <string name="passport_skip_login">Omiteți</string>
+    <string name="passport_skip_register">Omiteți crearea contului</string>
+    <string name="passport_skip_setup_account_msg">Vă puteți crea un cont Mi mai târziu în Setări.</string>
+    <string name="passport_skip_setup_account_title">Omiteți crearea contului</string>
+    <string name="passport_title_reg">Creați un cont</string>
+    <string name="passport_trust_device">Adăugați acest telefon în lista dispozitivelor verificate</string>
+    <string name="passport_trying_read_verify_code_sms">Se obține codul de verificare…</string>
+    <string name="passport_uplink_reg">Utilizați numărul detelefon</string>
+    <string name="passport_uplink_slot1_reg">Utilizați SIM-ul 1</string>
+    <string name="passport_uplink_slot2_reg">Utilizați SIM-ul 2</string>
+    <string name="passport_use_generated_pwd_message">Asigurați-vă că nu uitați parola. O puteți utiliza pentru a vă conecta la alte servicii Mi.</string>
+    <string name="passport_use_generated_pwd_title">Țineți minte parola</string>
+    <string name="passport_user_agreement">Acordul utilizatorului</string>
+    <string name="passport_user_agreement_p1">De acord cu </string>
+    <string name="passport_user_agreement_p2">Acordul utilizatorului</string>
+    <string name="passport_user_agreement_p3"> și </string>
+    <string name="passport_user_agreement_p4">Politica de confidențialitate</string>
+    <string name="passport_vcode_notification_title">Verificarea conectării este incompletă</string>
+    <string name="passport_vcode_prompt_long">Introduceți codul de verificare</string>
+    <string name="passport_vcode_sms_send_prompt">Trimite codul de verificare la %s</string>
+    <string name="passport_verification_failed">Autentificarea a eșuat</string>
+    <string name="passport_verify">Verificați</string>
+    <string name="passport_wait_for_sms_prompt">"Reluați procesul acum? Mesajele de verificare pot ajunge și după 10 minute atunci când telefonul se afla în raza de acoperire a operatorului."</string>
+    <string name="passport_wrong_captcha">Codul pe care l-ați introdus este incorect</string>
+    <string name="passport_wrong_phone_number_format">Formatul numărului de telefon pe care l-ați introdus nu este valid</string>
+    <string name="passport_wrong_vcode">Codul pe care l-ați introdus este incorect</string>
     <string name="path_develop_settings">Aplicații de sistem/Player Video/Setări dezvoltator</string>
     <string name="path_settings">Aplicații de sistem/Player Video/Setări</string>
     <string name="pause">Pauză</string>
