--- a/Romanian/main/Mms.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/strings.xml
@@ -210,6 +210,16 @@
     <string name="hms_first_use_tips">Pentru a recepţiona mesaje de serviciu, trebuie să vă conectaţi la o reţea Wi-Fi</string>
     <string name="hms_uri_param_err">URL-ul nu poate fi gol</string>
     <string name="hold_to_talk">Mențineți pentru a vorbi</string>
+    <string name="hybrid_check_network">Setări de rețea</string>
+    <string name="hybrid_data_error">A apărut o eroare</string>
+    <string name="hybrid_locating_fail">"Nu vi s-a putut determina locația"</string>
+    <string name="hybrid_network_access_denied">Accesul la rețea a fost refuzat</string>
+    <string name="hybrid_network_unavaliable">"Nu s-a putut conecta la rețea"</string>
+    <string name="hybrid_pull_to_refresh_pull_label">Glisați în jos pentru a împrospăta…</string>
+    <string name="hybrid_pull_to_refresh_refreshing_label">Doar o secundă…</string>
+    <string name="hybrid_pull_to_refresh_release_label">Eliberați pentru a împrospăta…</string>
+    <string name="hybrid_service_unavailiable">"Serviciul nu este disponibil"</string>
+    <string name="hybrid_try_again">Încercați din nou</string>
     <string name="i_know">OK</string>
     <string name="importing_progress_private_message">Importul mesajelor…</string>
     <string name="in_sms">Mesaj</string>
@@ -379,12 +389,12 @@
     <string name="pref_allow_network_access_summary">Porniți pentru a obține rapoarte de trimitere și alte servicii.</string>
     <string name="pref_cell_broadcast">Cell Broadcasts</string>
     <string name="pref_collapse_sp_messages_summary">Grupaţi notificările operatorului în același fir</string>
-    <string name="pref_delivery_ringtone">Notificare sonoră</string>
+    <string name="pref_delivery_ringtone">Sunet mesaj trimis</string>
     <string name="pref_edit_smsc_address">Centrul de servicii mesaje scurte(SMSC)</string>
     <string name="pref_forward_title">Redirecţionaţi</string>
-    <string name="pref_message_recovery_introduction_title">Recuperare mesaje</string>
     <string name="pref_messages_to_save">Setaţi numărul de mesaje pentru salvare</string>
     <string name="pref_mms_settings_title">Mesaje multimedia (MMS)</string>
+    <string name="pref_msg_trash_bin_title">Mesaje șterse recent</string>
     <string name="pref_notification_settings_title">Notificări</string>
     <string name="pref_other_title">Altele</string>
     <string name="pref_show_blocked_messages_summary">Afişare SMS blocate în lista de conversaţii</string>
@@ -395,7 +405,7 @@
     <string name="pref_summary_allow_si_sl_push">Permiteţi încărcarea conținutului din site-urile web</string>
     <string name="pref_summary_delete_limit">%1$s mesaje per conversaţie</string>
     <string name="pref_summary_delivery_reports">Solicitaţi un raport de livrare pentru fiecare mesaj trimis</string>
-    <string name="pref_summary_delivery_ringtone">Primiți o confirmare sonoră pentru mesajele expediate.</string>
+    <string name="pref_summary_delivery_ringtone">Primiți o confirmare sonoră pentru mesajele primite de către destinatari.</string>
     <string name="pref_summary_hide_festival">Ascundeţi fila \"Recomandate\" pentru limbile non-Chineze</string>
     <string name="pref_summary_manage_sim_messages">Gestionaţi mesajele stocate pe cartela SIM</string>
     <string name="pref_summary_mms_auto_retrieval">Descărcați fotografiile și videoclipurile din mesaje în mod automat</string>
