--- a/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
+++ b/Romanian/main/SecurityCenter.apk/res/values-ro/strings.xml
@@ -80,7 +80,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="antivirus_choose_engine_title">Definiţii</string>
     <string name="antivirus_monitor_btn_text_clean_risk">Eliminați aplicațiile care prezintă riscuri</string>
     <string name="antivirus_monitor_btn_text_clean_virus">Eliminați viruși</string>
-    <string name="antivirus_monitor_clean_tips">Au fost eliminate %s elemente</string>
+    <string name="antivirus_monitor_clean_tips">Elemente eliminate: %s</string>
     <string name="antivirus_monitor_risk_advice">"Această aplicație nu este sigură; eliminați-o"</string>
     <string name="antivirus_monitor_virus_advice">Această aplicație poate conține un virus; eliminați-o</string>
     <string name="antivirus_more_engine_dialog_summary">Utilizând mai multe seturi de definiții, scanarea poate dura mai mult timp.</string>
@@ -553,8 +553,8 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="hints_need_regular_scan">Scanare dispozitiv în mod regulat</string>
     <string name="hints_power_percent_title">acumulator</string>
     <string name="hints_remember_choice">Memorare preferință</string>
-    <string name="hints_risk_apk_list_item_summary">Risc (apk)</string>
-    <string name="hints_risk_app_list_item_summary">Risc (aplicaţie)</string>
+    <string name="hints_risk_apk_list_item_summary">apk</string>
+    <string name="hints_risk_app_list_item_summary">aplicaţie</string>
     <string name="hints_risk_descx_title">Descriere:</string>
     <string name="hints_risk_name_title">Risc:</string>
     <string name="hints_scan_progress">Progres: %d</string>
@@ -566,9 +566,9 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="hints_scanning_text">Scanare…</string>
     <string name="hints_scanning_virus_by_cloud">Scanare Cloud în curs de desfășurare…</string>
     <string name="hints_unknown_virus_name">Necunoscut</string>
-    <string name="hints_virus_apk_list_item_summary">Virus (apk)</string>
+    <string name="hints_virus_apk_list_item_summary">apk</string>
     <string name="hints_virus_apk_summary">%s (apk)</string>
-    <string name="hints_virus_app_list_item_summary">Virus (aplicaţie)</string>
+    <string name="hints_virus_app_list_item_summary">aplicaţie</string>
     <string name="hints_virus_app_summary">%s (aplicaţie)</string>
     <string name="hints_virus_descx_title">Descriere:</string>
     <string name="hints_virus_lib_update_default_summary">Ultima actualizare: necunoscută</string>
@@ -611,6 +611,7 @@ sau introduceţi parola pentru blocarea aplicațiilor"</string>
     <string name="keywords_securitycenter_settings">Economisire acumulator;Permisiuni;Listă blocări;Utilizare date;Setare plan de date;Testare rețea;Blocare aplicații;Economisire acumulator;Încălzire;Activare;Dezactivare;Acumulator;Descărcare;Pornire automată;ROOT;Locație;Acces contacte;Blocare;Black list;Smart blocklist;Fraudă;Vânzări;Telemarketing;Agenți;Date;Trafic;Calibrare;Conexiune;Internet;Test;Parolă;Confidențialitate;Acces;Protecție</string>
     <string name="kilobyteShort">KB</string>
     <string name="kilobyte_per_second">KB/s</string>
+    <string name="label_mi_stats">Mi analytics</string>
     <string name="last_check_canceled">Scanarea precedentă a fost anulată</string>
     <string name="last_check_date_today">"Scanat astăzi "</string>
     <string name="last_check_date_yesterday">"Scanat ieri "</string>
@@ -1242,13 +1243,13 @@ C"&lt;/b&gt;"itiți instrucțiunile care însoțesc router-ul și resetaţi-l la
     <string name="sorted_button">Sortaţi după</string>
     <string name="sorted_dialog_title">Sortaţi după</string>
     <string name="sp_back_title_text_zero">Sigur</string>
-    <string name="sp_background_risk_dialog_summary">, vă rugăm să analizați atent și să remediați riscurile referitoare la plăți</string>
-    <string name="sp_background_risk_dialog_title">Periculos</string>
+    <string name="sp_background_risk_dialog_summary">, analizați și remediați problemele referitoare la plăți.</string>
+    <string name="sp_background_risk_dialog_title">Atenție</string>
     <string name="sp_background_risk_type_messaging">Aplicația de mesagerie a sistemului a fost înlocuită</string>
     <string name="sp_background_risk_type_root">Sistemul a fost rootat</string>
     <string name="sp_background_risk_type_sign">Aplicația neoficială rulează</string>
-    <string name="sp_background_risk_type_virus">Aplicația virusată rulează</string>
-    <string name="sp_background_risk_type_wifi">Rețeaua Wi-Fi la care sunteți conectat nu este sigură</string>
+    <string name="sp_background_risk_type_virus">Aplicația virusată rulează în fundal</string>
+    <string name="sp_background_risk_type_wifi">Această rețea Wi-Fi nu este sigură</string>
     <string name="sp_button_text_ignore_alert_title">Ignorați acest element?</string>
     <string name="sp_empty_title_sign_exception">Apăsați lung pe numele aplicației din pagina rezultatelor pentru a o adăuga în lista de excepții</string>
     <string name="sp_monitored_apps_count_zero">Nicio aplicație de plăți nu este protejată</string>
