--- a/Romanian/main/TouchAssistant.apk/res/values-ro/strings.xml
+++ b/Romanian/main/TouchAssistant.apk/res/values-ro/strings.xml
@@ -19,7 +19,7 @@
     <string name="name_alipay_payment_code">Plată Alipay</string>
     <string name="name_alipay_scan">Scaner Alipay</string>
     <string name="name_all_mipay_cards">Plăți Mi</string>
-  <string name="name_handy_mode">Mod manual</string>
+    <string name="name_handy_mode">Mod Operare cu o mână</string>
     <string name="name_long_press_power_key">Apăsare lungă a butonului de pornire</string>
     <string name="name_memory_clean">Golire memorie cache</string>
     <string name="name_music_next_song">Melodia următoare</string>
